adding render aes to circle centers - condition on which to include circle annotation or not

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(compute_panel_circlepack)
 export(compute_panel_circlepack_center)
 export(geom_circlepack)
 export(geom_circlepack_text)
+export(stat_circlepack_center)
